--- a/prowlarr/values.yaml
+++ b/prowlarr/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/prowlarr
-  tag: ""
+  tag: "latest"
   pullPolicy: Always
 
 strategyType: Recreate
