--- a/jackett/values.yaml
+++ b/jackett/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/jackett
-  tag: amd64-latest
+  tag: latest
   pullPolicy: Always
 
 strategyType: Recreate
