--- a/nzbhydra2/values.yaml
+++ b/nzbhydra2/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/hydra2
-  tag: amd64-latest
+  tag: latest
   pullPolicy: Always
 
 strategyType: Recreate
