--- a/sabnzbd/values.yaml
+++ b/sabnzbd/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/sabnzbd
-  tag: amd64-latest
+  tag: latest
   pullPolicy: Always
 
 strategyType: Recreate
