--- a/sonarr/values.yaml
+++ b/sonarr/values.yaml
@@ -104,7 +104,7 @@ ingress:
 
 persistence:
   config:
-    enabled: true
+    enabled: false
     ## sonarr configuration data Persistent Volume Storage Class
     ## If defined, storageClassName: <storageClass>
     ## If set to "-", storageClassName: "", which disables dynamic provisioning
