--- a/sonarr/templates/ingress.yaml
+++ b/sonarr/templates/ingress.yaml
@@ -37,7 +37,8 @@ spec:
             backend:
               service:
                 name: {{ $fullName }}
-                service: http
+                port:
+                  number: http
         {{- end }}
   {{- end }}
 {{- end }}
