--- a/sonarr/values.yaml
+++ b/sonarr/values.yaml
@@ -90,13 +90,16 @@ service:
 
 ingress:
   enabled: false
+  ingressClassName: traefik
   annotations:
     {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: sonarr.local
-      paths: ["/"]
+      paths:
+        path: /
+        pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
